tests/ui/abi/contract_special_functions.stderr
error: No visibility specified for fallback. Did you intend to add external?
  --> ROOT/tests/ui/abi/contract_special_functions.sol:LL:CC
   |
LL | abstract contract A {
   |                   ^
   |

error: No visibility specified for receive. Did you intend to add external?
  --> ROOT/tests/ui/abi/contract_special_functions.sol:LL:CC
   |
LL | abstract contract B is A {
   |                   ^
   |

error: No visibility specified for fallback. Did you intend to add external?
  --> ROOT/tests/ui/abi/contract_special_functions.sol:LL:CC
   |
LL | contract C {
   |          ^
   |

error: No visibility specified for receive. Did you intend to add external?
  --> ROOT/tests/ui/abi/contract_special_functions.sol:LL:CC
   |
LL | contract D is C {
   |          ^
   |

error: aborting due to 4 previous errors

